; ModuleID = '/home/carl/AnghaBench/linux/drivers/dma/extr_fsldma.c_fsl_dma_device_terminate_all.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/dma/extr_fsldma.c_fsl_dma_device_terminate_all.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.dma_chan = type { i32 }
%struct.fsldma_chan = type { i32, i32, i32, i32, i32 }

@EINVAL = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.dma_chan*)* @fsl_dma_device_terminate_all to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @fsl_dma_device_terminate_all(%struct.dma_chan* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.dma_chan*, align 8
  %4 = alloca %struct.fsldma_chan*, align 8
  store %struct.dma_chan* %0, %struct.dma_chan** %3, align 8
  %5 = load %struct.dma_chan*, %struct.dma_chan** %3, align 8
  %6 = icmp ne %struct.dma_chan* %5, null
  br i1 %6, label %10, label %7

7:                                                ; preds = %1
  %8 = load i32, i32* @EINVAL, align 4
  %9 = sub nsw i32 0, %8
  store i32 %9, i32* %2, align 4
  br label %35

10:                                               ; preds = %1
  %11 = load %struct.dma_chan*, %struct.dma_chan** %3, align 8
  %12 = call %struct.fsldma_chan* @to_fsl_chan(%struct.dma_chan* %11)
  store %struct.fsldma_chan* %12, %struct.fsldma_chan** %4, align 8
  %13 = load %struct.fsldma_chan*, %struct.fsldma_chan** %4, align 8
  %14 = getelementptr inbounds %struct.fsldma_chan, %struct.fsldma_chan* %13, i32 0, i32 1
  %15 = call i32 @spin_lock_bh(i32* %14)
  %16 = load %struct.fsldma_chan*, %struct.fsldma_chan** %4, align 8
  %17 = call i32 @dma_halt(%struct.fsldma_chan* %16)
  %18 = load %struct.fsldma_chan*, %struct.fsldma_chan** %4, align 8
  %19 = load %struct.fsldma_chan*, %struct.fsldma_chan** %4, align 8
  %20 = getelementptr inbounds %struct.fsldma_chan, %struct.fsldma_chan* %19, i32 0, i32 4
  %21 = call i32 @fsldma_free_desc_list(%struct.fsldma_chan* %18, i32* %20)
  %22 = load %struct.fsldma_chan*, %struct.fsldma_chan** %4, align 8
  %23 = load %struct.fsldma_chan*, %struct.fsldma_chan** %4, align 8
  %24 = getelementptr inbounds %struct.fsldma_chan, %struct.fsldma_chan* %23, i32 0, i32 3
  %25 = call i32 @fsldma_free_desc_list(%struct.fsldma_chan* %22, i32* %24)
  %26 = load %struct.fsldma_chan*, %struct.fsldma_chan** %4, align 8
  %27 = load %struct.fsldma_chan*, %struct.fsldma_chan** %4, align 8
  %28 = getelementptr inbounds %struct.fsldma_chan, %struct.fsldma_chan* %27, i32 0, i32 2
  %29 = call i32 @fsldma_free_desc_list(%struct.fsldma_chan* %26, i32* %28)
  %30 = load %struct.fsldma_chan*, %struct.fsldma_chan** %4, align 8
  %31 = getelementptr inbounds %struct.fsldma_chan, %struct.fsldma_chan* %30, i32 0, i32 0
  store i32 1, i32* %31, align 4
  %32 = load %struct.fsldma_chan*, %struct.fsldma_chan** %4, align 8
  %33 = getelementptr inbounds %struct.fsldma_chan, %struct.fsldma_chan* %32, i32 0, i32 1
  %34 = call i32 @spin_unlock_bh(i32* %33)
  store i32 0, i32* %2, align 4
  br label %35

35:                                               ; preds = %10, %7
  %36 = load i32, i32* %2, align 4
  ret i32 %36
}

declare dso_local %struct.fsldma_chan* @to_fsl_chan(%struct.dma_chan*) #1

declare dso_local i32 @spin_lock_bh(i32*) #1

declare dso_local i32 @dma_halt(%struct.fsldma_chan*) #1

declare dso_local i32 @fsldma_free_desc_list(%struct.fsldma_chan*, i32*) #1

declare dso_local i32 @spin_unlock_bh(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
